# TUIDBTV

./: .gitignore  LICENSE  README.md  connections.json  default.css  main.py  pyproject.toml  requirements.txt
config/: ConfigParser.py
controllers/: ControllerFactory.py  DBController.py  MySQLController.py  PostgresController.py  SQLLiteController.py
enums_and_variables/: __init__.py
src/tuidbtv/: main.py
src/tuidbtv/config/: ConfigParser.py
src/tuidbtv/controllers/: ControllerFactory.py  MySQLController.py  PostgresController.py  SQLLiteController.py
src/tuidbtv/widgets/: NewConnection.py  SQLEditor.py  SelectConnection.py
src/tuidbtv/widgets/forms/: ConnectionForms.py
tuidbtv/: __main__.py  default.css
tuidbtv/config/: ConfigParser.py
tuidbtv/controllers/: ControllerFactory.py  DBController.py  MySQLController.py  PostgresController.py  SQLLiteController.py
tuidbtv/enums_and_variables/: __init__.py
tuidbtv/signals/: __init__.py
tuidbtv/suggesters/: SuggesterDict.py
tuidbtv/widgets/: NewConnection.py  PreviewData.py  QuitScreen.py  SQLEditor.py  SelectConnection.py
tuidbtv/widgets/forms/: ConnectionForms.py
widgets/: NewConnection.py  PopUpScreen.py  SQLEditor.py  SelectConnection.py
widgets/forms/: ConnectionForms.py
