[project]
name = "tuidbtv"
version = "0.0.1"
authors = [
  { name="Lakdemon", email="jahochuest@gmail.com" },
]
description = "console database client"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lakdemon/TUIDBTV"
"Bug Tracker" = "https://github.com/lakdemon/TUIDBTV/issues"

[build-system]
requires = [
    "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"
